syntax = "proto3";

option java_outer_classname = "SubscriptionProto";

enum Operator {
  EQ = 0;  // ==
  NE = 1;  // !=
  LT = 2;  // <
  LE = 3;  // <=
  GT = 4;  // >
  GE = 5;  // >=
}

message StringFieldCondition {
  Operator operator = 1;
  string value = 2;
}

message IntFieldCondition {
  Operator operator = 1;
  int32 value = 2;
}

message DoubleFieldCondition {
  Operator operator = 1;
  double value = 2;
}

message Subscription {
  StringFieldCondition date = 1;
  IntFieldCondition temp = 2;
  StringFieldCondition direction = 3;
  IntFieldCondition wind = 4;
  DoubleFieldCondition rain = 5;
  IntFieldCondition station = 6;
  StringFieldCondition city = 7;

  DoubleFieldCondition avg_temp = 8;
}